update - improve structure

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header class="site-header">
   <div class="header-left">
     <a href="{{ "/" | relative_url }}" class="header-logo" title="{{ site.title }}">
-      <img src="{{ "/assets/imgs/system3_logo_transparent_black.png" | relative_url }}" alt="{{ site.title }} Logo" />
+      <img src="{{ "/assets/imgs/JH_Logo-black.png" | relative_url }}" alt="{{ site.title }} Logo" />
     </a>
     <a href="{{ "/" | relative_url }}" class="header-logo-text">
-      <h1 class="site-title">{{ site.title }}</h1>
+      <div class="site-title">{{ site.title }}</div>
     </a>
   </div>
 
