--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -118,6 +118,7 @@ layout: default
               <span class="tag">Generative Workflows</span>
               <span class="tag">AI Integration</span>
               <span class="tag">Python</span>
+              <span class="tag">Custom LoRAs</span>
               <span class="tag">Cloud Integration</span>
               <span class="tag">R&D</span>
               <span class="tag">Agentic Workflows</span>
